[metadata]
name = url.py
version = 0.1.0
author = Guard Boi
author_email = guard@cow.futbol
description = Useful link managment class
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mariohero24/url.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True